add deals resolver

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@apollo/server": "^5.0.0",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.2.3",
