--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.6",
     "@nestjs/throttler": "^6.0.0",
     "@prisma/client": "^6.15.0",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.7.0",
     "graphql": "^16.11.0",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
